syntax = "proto3";
package v1;

import "google/protobuf/struct.proto";
import "google/protobuf/duration.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "status.proto";
import "metadata.proto";

message Upstream {
    string name = 1;
    string type = 2;
    google.protobuf.Duration connection_timeout = 3 [(gogoproto.stdduration) = true];
    google.protobuf.Struct spec = 4;
    repeated Function functions = 5;
    // read only
    Status status = 6  [(gogoproto.embed) = true];
    Metadata metadata = 7  [(gogoproto.embed) = true];
}

message Function {
    string name = 1;
    google.protobuf.Struct spec = 4;
}