syntax = "proto3";
package v1;

import "google/protobuf/struct.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "status.proto";
import "metadata.proto";

message VirtualHost {
    // required, must be unique
    // cannot be "default" unless it refers to the default vhost
    string name = 1;
    // if this is empty, this host will become / be merged with
    // the default virtualhost who has domains = ["*"]
    repeated string domains = 2;
    // require at least 1 route
    repeated Route routes = 3;
    // optional
    SSLConfig ssl_config = 4;

    // read only
    Status status = 5;
    Metadata metadata = 6;
}

message Route {
    Matcher matcher = 1;
    repeated WeightedDestination multiple_destinations = 2;
    Destination single_destination = 3;
    string prefix_rewrite = 4;
    google.protobuf.Struct extensions = 5;
}

message Matcher {
    oneof path {
        string path_prefix = 1;
        string path_regex = 2;
        string path_exact = 3;
    }
    map<string, string> headers = 4;
    map<string, string> query_params = 5;
    repeated string verbs = 6;
    string event_id = 7;
}

message WeightedDestination {
    Destination destination = 1  [(gogoproto.embed) = true];
    uint32 weight = 2;
}

message Destination {
    oneof destination_type {
        FunctionDestination function = 1;
        UpstreamDestination upstream = 2;
    }
}

message FunctionDestination {
    string upstream_name = 1;
    string function_name = 2;
}

message UpstreamDestination {
    string name = 1;
}

message SSLConfig {
    string secret_ref = 1;
}